# short-links

./: Cargo.toml  README.md  config.json  goals.txt  urls.json
src/: main.rs
static/: config.js  config.template.js  index.html
