[package]
name = "short-links"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "trace"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"